@@ -279,7 +279,7 @@ void MainWindow::initToolBar()
 {
   initPackageGroups();
   ui->mainToolBar->setIconSize(QSize(22, 22));
-  ui->mainToolBar->addAction(ui->actionSyncPackages);
+  ui->mainToolBar->addAction(ui->actionCheckUpdates);
   ui->mainToolBar->addAction(ui->actionSystemUpgrade);
 
   if (m_outdatedStringList->count() > 0)
@@ -732,7 +732,7 @@ void MainWindow::initActions()
   connect(ui->actionRemoveTransactionItem, SIGNAL(triggered()), this, SLOT(onPressDelete()));
   connect(ui->actionRemoveTransactionItems, SIGNAL(triggered()), this, SLOT(onPressDelete()));
   connect(ui->actionExit, SIGNAL(triggered()), this, SLOT(close()));
-  connect(ui->actionSyncPackages, SIGNAL(triggered()), this, SLOT(doSyncDatabase()));
+  connect(ui->actionCheckUpdates, SIGNAL(triggered()), this, SLOT(doSyncDatabase()));
   connect(ui->actionSystemUpgrade, SIGNAL(triggered()), this, SLOT(doPreSystemUpgrade()));
   connect(ui->actionRemove, SIGNAL(triggered()), this, SLOT(insertIntoRemovePackage()));
   connect(ui->actionInstall, SIGNAL(triggered()), this, SLOT(insertIntoInstallPackage()));
@@ -757,7 +757,7 @@ void MainWindow::initActions()
   connect(ui->actionOpenTerminal, SIGNAL(triggered()), this, SLOT(openTerminal()));
 
   // Use theme icons for QActions
-  ui->actionSyncPackages->setIcon(IconHelper::getIconSyncDatabase());
+  ui->actionCheckUpdates->setIcon(IconHelper::getIconSyncDatabase());
   ui->actionCommit->setIcon(IconHelper::getIconCommit());
   ui->actionCancel->setIcon(IconHelper::getIconRollback());
   ui->actionExit->setIcon(IconHelper::getIconExit());
